--- a/src/_data/quicklinks.yaml
+++ b/src/_data/quicklinks.yaml
@@ -1,14 +1,14 @@
 ---
 links:
-  - title: Netlify CMS
-    url: "https://www.netlifycms.org/"
-    desc: Open source content management for your Git workflow
-  - title: Eleventy
-    url: "https://www.11ty.dev/"
-    desc: Eleventy is a simpler static site generator.
-  - title: Alpine.js
-    url: "https://github.com/alpinejs/alpine"
-    desc: A minimal framework for composing JavaScript behavior in your markup.
-  - title: Tailwind CSS
-    url: "https://tailwindcss.com/"
-    desc: A utility-first CSS framework for rapidly building custom designs.
+  - title: Blog
+    url: "/blog"
+    desc: I don't write very often, but when I do you'll find it here
+  - title: Open Source
+    url: "/oss"
+    desc: I'm a casual contributor to open source work.
+  - title: Work History
+    url: "/work"
+    desc: Take a peak at my CV
+  - title: Woami
+    url: "/who"
+    desc: Learn a little about me
