--- a/src/_data/quicklinks.yaml
+++ b/src/_data/quicklinks.yaml
@@ -10,5 +10,5 @@ links:
     url: "/work"
     desc: Take a peak at my CV
   - title: Woami
-    url: "/who"
+    url: "/whoami"
     desc: Learn a little about me
